// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Different ways to make an equation All Text in constructor with all options 1`] = `
FigureElementPrimitive {
  "_custom": Object {},
  "afterDrawCallback": null,
  "angleToDraw": -1,
  "animationFinishedCallback": null,
  "animations": AnimationManager {
    "animationSpeed": 1,
    "animations": Array [],
    "customSteps": Array [],
    "element": [Circular],
    "finishedCallback": [Function],
    "fnMap": FunctionMap {
      "global": GlobalFunctionMap {
        "map": Object {},
      },
      "map": Object {},
    },
    "options": Object {
      "translation": Object {},
    },
    "recorder": undefined,
    "state": "idle",
    "subscriptions": SubscriptionManager {
      "fnMap": FunctionMap {
        "global": GlobalFunctionMap {
          "map": Object {},
        },
        "map": Object {},
      },
      "subscriptions": Object {},
    },
    "timeKeeper": TimeKeeper {
      "animateOnFrame": false,
      "drawQueue": Array [],
      "idCounter": 0,
      "lastDrawTime": null,
      "lastTime": 3000,
      "manual": false,
      "nextDrawQueue": Array [],
      "nowTime": 3000,
      "requestNextAnimationFrame": [Function],
      "speed": 1,
      "syncNowTimeout": 100,
      "timeoutId": null,
      "timers": Object {},
      "updateSyncNow": true,
    },
  },
  "beforeDrawCallback": null,
  "border": "draw",
  "cancelSetTransform": false,
  "cannotTouchHole": false,
  "color": Array [
    0.95,
    0,
    0,
    1,
  ],
  "copyTransforms": Array [],
  "custom": Object {
    "options": Object {
      "border": "draw",
      "color": Array [
        0.95,
        0,
        0,
        1,
      ],
      "defaultTextTouchBorder": 0,
      "font": Object {
        "color": Array [
          0.95,
          0,
          0,
          1,
        ],
        "family": "Times New Roman",
        "opacity": 1,
        "size": 0.2,
        "style": "italic",
        "weight": "200",
      },
      "mods": Object {
        "dimColor": Array [
          0.5,
          0.5,
          0.5,
          1,
        ],
      },
      "position": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
      },
      "text": Array [
        Object {
          "text": "a",
          "touchBorder": 0,
        },
      ],
      "touchBorder": "buffer",
      "transform": Transform {
        "_type": "transform",
        "index": 3,
        "mat": Array [
          1,
          0,
          0,
          0,
          1,
          0,
          0,
          0,
          1,
        ],
        "name": "text",
        "order": Array [
          Scale {
            "_type": "point",
            "name": "text",
            "x": 1,
            "y": 1,
          },
          Rotation {
            "name": "text",
            "r": 0,
          },
          Translation {
            "_type": "point",
            "name": "text",
            "x": 0,
            "y": 0,
          },
        ],
      },
      "xAlign": "left",
      "yAlign": "baseline",
    },
    "setText": [Function],
    "updateBorders": [Function],
    "updateText": [Function],
  },
  "customState": Object {},
  "defaultColor": Array [
    0.95,
    0,
    0,
    1,
  ],
  "dependantTransform": false,
  "dimColor": Array [
    0.5,
    0.5,
    0.5,
    1,
  ],
  "drawBorder": Array [
    Array [
      Point {
        "_type": "point",
        "x": 0,
        "y": -0.008,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": -0.008,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": 0.095,
      },
      Point {
        "_type": "point",
        "x": 0,
        "y": 0.095,
      },
    ],
  ],
  "drawBorderBuffer": Array [
    Array [
      Point {
        "_type": "point",
        "x": 0,
        "y": -0.008,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": -0.008,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": 0.095,
      },
      Point {
        "_type": "point",
        "x": 0,
        "y": 0.095,
      },
    ],
  ],
  "drawPriority": 1,
  "drawTransforms": Array [],
  "drawingObject": TextObject {
    "drawContext2D": Array [
      DrawContext2D {
        "canvas": Object {
          "height": 1000,
          "offsetHeight": 500,
          "offsetWidth": 1000,
          "style": Object {
            "height": "500px",
            "width": "1000px",
          },
          "width": 2000,
        },
        "ctx": Object {
          "canvas": Object {
            "height": 500,
            "width": 1000,
          },
          "clearRect": [Function],
          "fillText": [Function],
          "filledText": Object {
            "count": 0,
            "text": "",
            "x": null,
            "y": null,
          },
          "font": "italic 200 20px Times New Roman",
          "measureText": [Function],
          "restore": [Function],
          "save": [Function],
          "scale": [Function],
          "textAlign": [Function],
          "textBaseline": [Function],
          "transform": [Function],
          "transformMatrix": Array [
            0,
          ],
        },
        "ratio": 2,
        "resize": [Function],
      },
    ],
    "fixColor": false,
    "lastDrawTransform": Array [
      1,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      1,
    ],
    "location": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
    },
    "scalingFactor": 100,
    "text": Array [
      FigureText {
        "bounds": Rect {
          "bottom": -0.008,
          "height": 0.10300000000000001,
          "left": 0,
          "right": 0.1,
          "top": 0.095,
          "width": 0.1,
        },
        "drawContext2D": Array [
          DrawContext2D {
            "canvas": Object {
              "height": 1000,
              "offsetHeight": 500,
              "offsetWidth": 1000,
              "style": Object {
                "height": "500px",
                "width": "1000px",
              },
              "width": 2000,
            },
            "ctx": Object {
              "canvas": Object {
                "height": 500,
                "width": 1000,
              },
              "clearRect": [Function],
              "fillText": [Function],
              "filledText": Object {
                "count": 0,
                "text": "",
                "x": null,
                "y": null,
              },
              "font": "italic 200 20px Times New Roman",
              "measureText": [Function],
              "restore": [Function],
              "save": [Function],
              "scale": [Function],
              "textAlign": [Function],
              "textBaseline": [Function],
              "transform": [Function],
              "transformMatrix": Array [
                0,
              ],
            },
            "ratio": 2,
            "resize": [Function],
          },
        ],
        "font": FigureFont {
          "color": Array [
            0.95,
            0,
            0,
            1,
          ],
          "family": "Times New Roman",
          "opacity": 1,
          "size": 0.2,
          "style": "italic",
          "weight": "200",
        },
        "lastDraw": null,
        "lastDrawRect": Rect {
          "bottom": 0,
          "height": 1,
          "left": 0,
          "right": 1,
          "top": 1,
          "width": 1,
        },
        "location": Point {
          "_type": "point",
          "x": 0,
          "y": 0,
        },
        "locationAligned": Point {
          "_type": "point",
          "x": 0,
          "y": 0,
        },
        "measure": Object {
          "ascent": 0.095,
          "descent": 0.008,
          "width": 0.1,
        },
        "onClick": null,
        "text": "a",
        "textBorder": Array [
          Point {
            "_type": "point",
            "x": 0,
            "y": -0.008,
          },
          Point {
            "_type": "point",
            "x": 0.1,
            "y": -0.008,
          },
          Point {
            "_type": "point",
            "x": 0.1,
            "y": 0.095,
          },
          Point {
            "_type": "point",
            "x": 0,
            "y": 0.095,
          },
        ],
        "textBorderBuffer": Array [
          Point {
            "_type": "point",
            "x": 0,
            "y": -0.008,
          },
          Point {
            "_type": "point",
            "x": 0.1,
            "y": -0.008,
          },
          Point {
            "_type": "point",
            "x": 0.1,
            "y": 0.095,
          },
          Point {
            "_type": "point",
            "x": 0,
            "y": 0.095,
          },
        ],
        "touchBorder": 0,
        "xAlign": "left",
        "yAlign": "baseline",
      },
    ],
    "textBorder": Array [
      Array [
        Point {
          "_type": "point",
          "x": 0,
          "y": -0.008,
        },
        Point {
          "_type": "point",
          "x": 0.1,
          "y": -0.008,
        },
        Point {
          "_type": "point",
          "x": 0.1,
          "y": 0.095,
        },
        Point {
          "_type": "point",
          "x": 0,
          "y": 0.095,
        },
      ],
    ],
    "textBorderBuffer": Array [
      Array [
        Point {
          "_type": "point",
          "x": 0,
          "y": -0.008,
        },
        Point {
          "_type": "point",
          "x": 0.1,
          "y": -0.008,
        },
        Point {
          "_type": "point",
          "x": 0.1,
          "y": 0.095,
        },
        Point {
          "_type": "point",
          "x": 0,
          "y": 0.095,
        },
      ],
    ],
    "type": "drawingObject",
  },
  "figureLimits": Rect {
    "bottom": -1,
    "height": 2,
    "left": -1,
    "right": 1,
    "top": 1,
    "width": 2,
  },
  "fnMap": FunctionMap {
    "global": GlobalFunctionMap {
      "map": Object {},
    },
    "map": Object {
      "_elementPulseSettingsTransformMethod": Object {
        "fn": [Function],
      },
      "tools.math.easeinout": Object {
        "fn": [Function],
      },
      "tools.math.linear": Object {
        "fn": [Function],
      },
      "tools.math.sinusoid": Object {
        "fn": [Function],
      },
      "tools.math.sinusoidAbs": Object {
        "fn": [Function],
      },
      "tools.math.triangle": Object {
        "fn": [Function],
      },
    },
  },
  "frozenPulseTransforms": Array [],
  "getBorderPoints": [Function],
  "getBorderPointsSuper": [Function],
  "hasTouchableElements": false,
  "holeBorder": Array [
    Array [],
  ],
  "interactiveLocation": Point {
    "_type": "point",
    "x": 0,
    "y": 0,
  },
  "internalSetTransformCallback": null,
  "isInteractive": undefined,
  "isMovable": false,
  "isRenderedAsImage": false,
  "isShown": true,
  "isTouchable": false,
  "lastDrawElementTransformPosition": Object {
    "elementCount": 3,
    "parentCount": 6,
  },
  "lastDrawOpacity": 1,
  "lastDrawPulseTransform": Transform {
    "_type": "transform",
    "index": 3,
    "mat": Array [
      1,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      1,
    ],
    "name": "text",
    "order": Array [
      Scale {
        "_type": "point",
        "name": "text",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "text",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "text",
        "x": 0,
        "y": 0,
      },
    ],
  },
  "lastDrawTime": 0,
  "lastDrawTransform": Transform {
    "_type": "transform",
    "index": 0,
    "mat": Array [
      0.45,
      0,
      3.8875,
      0,
      0.45,
      3.95725,
      0,
      0,
      1,
    ],
    "name": "Equation",
    "order": Array [
      Scale {
        "_type": "point",
        "name": "text",
        "x": 0.45,
        "y": 0.45,
      },
      Rotation {
        "name": "text",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "text",
        "x": 1.8875,
        "y": 1.9572500000000002,
      },
      Scale {
        "_type": "point",
        "name": "Equation",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "Equation",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "Equation",
        "x": 1,
        "y": 1,
      },
      Scale {
        "_type": "point",
        "name": "Equation",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "Equation",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "Equation",
        "x": 1,
        "y": 1,
      },
    ],
  },
  "lengthToDraw": -1,
  "move": Object {
    "bounds": TransformBounds {
      "boundary": Array [
        null,
        null,
        null,
      ],
      "bounds": "inside",
      "order": Array [
        "s",
        "r",
        "t",
      ],
      "precision": 8,
    },
    "canBeMovedAfterLosingTouch": true,
    "element": null,
    "freely": Object {
      "bounceLoss": 0.5,
      "callback": null,
      "deceleration": 5,
      "zeroVelocityThreshold": 0.0001,
    },
    "maxVelocity": 5,
    "sizeInBounds": false,
    "transformClip": null,
    "type": "translation",
  },
  "name": "a",
  "onAdd": null,
  "onClick": null,
  "opacity": 1,
  "parent": null,
  "parentTransform": Array [
    Transform {
      "_type": "transform",
      "index": 0,
      "mat": Array [
        1,
        0,
        2,
        0,
        1,
        2,
        0,
        0,
        1,
      ],
      "name": "Equation",
      "order": Array [
        Scale {
          "_type": "point",
          "name": "Equation",
          "x": 1,
          "y": 1,
        },
        Rotation {
          "name": "Equation",
          "r": 0,
        },
        Translation {
          "_type": "point",
          "name": "Equation",
          "x": 1,
          "y": 1,
        },
        Scale {
          "_type": "point",
          "name": "Equation",
          "x": 1,
          "y": 1,
        },
        Rotation {
          "name": "Equation",
          "r": 0,
        },
        Translation {
          "_type": "point",
          "name": "Equation",
          "x": 1,
          "y": 1,
        },
      ],
    },
  ],
  "pointsDefinition": Object {},
  "pointsToDraw": -1,
  "pulseDefault": Object {
    "angle": 0,
    "centerOn": "this",
    "done": null,
    "duration": 1,
    "frequency": 0,
    "num": 1,
    "progression": "sinusoid",
    "rotation": null,
    "scale": 2,
    "space": "figure",
    "translation": null,
    "when": "syncNow",
    "xAlign": "center",
    "yAlign": "middle",
  },
  "pulseSettings": Object {
    "A": 1,
    "B": 0.5,
    "C": 0,
    "allowFreezeOnStop": false,
    "callback": [Function],
    "delta": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
    },
    "frequency": 0.5,
    "num": 1,
    "progression": "tools.math.sinusoid",
    "time": 1,
    "transformMethod": "_elementPulseSettingsTransformMethod",
    "type": "scale",
  },
  "pulseTransforms": Array [],
  "recorder": Recorder {
    "audio": null,
    "currentTime": 0,
    "duration": 0,
    "eventIndex": Object {
      "_autoCursor": -1,
      "_autoCursorMove": -1,
      "_autoExec": -1,
      "_autoTouch": -1,
      "cursor": -1,
      "cursorMove": -1,
      "exec": -1,
      "touch": -1,
    },
    "events": Object {
      "_autoCursor": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoCursorMove": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoExec": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoTouch": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "cursor": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "cursorMove": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "exec": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "touch": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
    },
    "eventsCache": Object {},
    "eventsToPlay": Array [],
    "figure": null,
    "isAudioPlaying": false,
    "lastRecordTime": null,
    "lastRecordTimeCount": 0,
    "lastSeekTime": null,
    "pauseState": null,
    "precision": 8,
    "queueSeekId": null,
    "queueSeekTime": 0,
    "reference": "__base",
    "referenceIndex": 0,
    "settings": Object {
      "pause": "freeze",
      "play": "instant",
    },
    "state": "idle",
    "stateIndex": -1,
    "stateTimeStep": 1,
    "states": ObjectTracker {
      "baseReference": null,
      "diffs": Array [],
      "lastReferenceName": "__base",
      "precision": 8,
      "references": Object {},
    },
    "statesCache": ObjectTracker {
      "baseReference": null,
      "diffs": Array [],
      "lastReferenceName": "__base",
      "precision": 8,
      "references": Object {},
    },
    "subscriptions": SubscriptionManager {
      "fnMap": FunctionMap {
        "global": GlobalFunctionMap {
          "map": Object {},
        },
        "map": Object {},
      },
      "subscriptions": Object {},
    },
    "timeKeeper": TimeKeeper {
      "animateOnFrame": false,
      "animationId": 20,
      "drawQueue": Array [],
      "idCounter": 0,
      "lastDrawTime": null,
      "lastTime": 3000,
      "manual": false,
      "nextDrawQueue": Array [],
      "nowTime": 3000,
      "requestNextAnimationFrame": [Function],
      "speed": 1,
      "syncNowTimeout": 100,
      "timeoutId": null,
      "timers": Object {},
      "updateSyncNow": true,
    },
    "timeUpdates": 100,
    "timeUpdatesTimeoutID": null,
    "timeoutID": null,
    "videoToNowDelta": 0,
    "worker": null,
  },
  "renderedOnNextDraw": false,
  "scenarios": Object {},
  "setPointsFromDefinition": null,
  "setTransformCallback": null,
  "state": Object {
    "isBeingMoved": false,
    "isMovingFreely": false,
    "isPulsing": false,
    "movement": Object {
      "previousTime": null,
      "previousTransform": Transform {
        "_type": "transform",
        "index": 3,
        "mat": Array [
          1,
          0,
          0,
          0,
          1,
          0,
          0,
          0,
          1,
        ],
        "name": "text",
        "order": Array [
          Scale {
            "_type": "point",
            "name": "text",
            "x": 1,
            "y": 1,
          },
          Rotation {
            "name": "text",
            "r": 0,
          },
          Translation {
            "_type": "point",
            "name": "text",
            "x": 0,
            "y": 0,
          },
        ],
      },
      "velocity": Transform {
        "_type": "transform",
        "index": 3,
        "mat": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
        ],
        "name": "text",
        "order": Array [
          Scale {
            "_type": "point",
            "name": "text",
            "x": 0,
            "y": 0,
          },
          Rotation {
            "name": "text",
            "r": 0,
          },
          Translation {
            "_type": "point",
            "name": "text",
            "x": 0,
            "y": 0,
          },
        ],
      },
    },
    "preparingToStop": false,
    "pulse": Object {
      "startTime": null,
    },
  },
  "stateProperties": Array [],
  "subscriptions": SubscriptionManager {
    "fnMap": FunctionMap {
      "global": GlobalFunctionMap {
        "map": Object {},
      },
      "map": Object {
        "_elementPulseSettingsTransformMethod": Object {
          "fn": [Function],
        },
        "tools.math.easeinout": Object {
          "fn": [Function],
        },
        "tools.math.linear": Object {
          "fn": [Function],
        },
        "tools.math.sinusoid": Object {
          "fn": [Function],
        },
        "tools.math.sinusoidAbs": Object {
          "fn": [Function],
        },
        "tools.math.triangle": Object {
          "fn": [Function],
        },
      },
    },
    "subscriptions": Object {},
  },
  "tieToHTML": Object {
    "element": null,
    "scale": "fit",
    "updateOnResize": true,
    "window": Rect {
      "bottom": -1,
      "height": 2,
      "left": -1,
      "right": 1,
      "top": 1,
      "width": 2,
    },
  },
  "timeKeeper": TimeKeeper {
    "animateOnFrame": false,
    "animationId": 20,
    "drawQueue": Array [],
    "idCounter": 0,
    "lastDrawTime": null,
    "lastTime": 3000,
    "manual": false,
    "nextDrawQueue": Array [],
    "nowTime": 3000,
    "requestNextAnimationFrame": [Function],
    "speed": 1,
    "syncNowTimeout": 100,
    "timeoutId": null,
    "timers": Object {},
    "updateSyncNow": true,
  },
  "touchBorder": "buffer",
  "touchPriority": false,
  "transform": Transform {
    "_type": "transform",
    "index": 3,
    "mat": Array [
      0.45,
      0,
      1.8875,
      0,
      0.45,
      1.9572500000000002,
      0,
      0,
      1,
    ],
    "name": "text",
    "order": Array [
      Scale {
        "_type": "point",
        "name": "text",
        "x": 0.45,
        "y": 0.45,
      },
      Rotation {
        "name": "text",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "text",
        "x": 1.8875,
        "y": 1.9572500000000002,
      },
    ],
  },
  "type": "primitive",
  "uid": "0000000000",
  "unrenderNextDraw": false,
}
`;

exports[`Different ways to make an equation Separate All Text 1`] = `
Array [
  0.7,
  0,
  0.035,
  0,
  0.7,
  0.0996,
  0,
  0,
  1,
]
`;

exports[`Different ways to make an equation Separate All Text 2`] = `
Array [
  0.7,
  0,
  0.035,
  0,
  0.7,
  -0.084,
  0,
  0,
  1,
]
`;

exports[`Different ways to make an equation Separate All Text 3`] = `
Array [
  0.14,
  0,
  0,
  0,
  0.01,
  0.049,
  0,
  0,
  1,
]
`;

exports[`Different ways to make an equation Separate All Text 4`] = `
Array [
  0.7,
  0,
  0.14,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;
